--- a/css/style.css
+++ b/css/style.css
@@ -3,6 +3,8 @@
 @import "status-bar.css";
 @import "header.css";
 @import "nav-bar.css";
+@import "friend.css";
+@import "friends.css";
 
 * {
     box-sizing: border-box;
@@ -19,4 +21,5 @@ body{
 
 a{
     color: inherit;
+    text-decoration: none;
 }
